<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.kwbhatti</groupId>
	<artifactId>data-utility</artifactId>
	<version>1.0.1</version>
	<name>io.github.kwbhatti:data-utility</name>
	<description>Description</description>
	<url>https://github.com/kwbhatti/data-utility</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<maven.source.plugin>3.2.1</maven.source.plugin>
		<maven.javadoc.plugin>3.2.0</maven.javadoc.plugin>
		<testng.version>6.14.3</testng.version>
		<compiler.plugin.version>3.8.0</compiler.plugin.version>
		<surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
		<nexus.staging.maven.plugin>1.6.8</nexus.staging.maven.plugin>
		<maven.gpg.plugin>1.6</maven.gpg.plugin>
	</properties>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Khurram Bhatti</name>
			<email>khurram.waleed.bhatti@gmail.com</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git@github.com:kwbhatti/data-utility.git</connection>
		<developerConnection>scm:git:ssh://github.com:kwbhatti/data-utility.git</developerConnection>
		<url>https://github.com/kwbhatti/data-utility.git/tree/master</url>
	</scm>
	<dependencies>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>core</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${compiler.plugin.version}</version>
						<configuration>
							<source>${java.version}</source>
							<target>${java.version}</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${surefire.plugin.version}</version>
						<configuration>
							<suiteXmlFiles>
								<suiteXmlFile>testngFiles/${testngFile}</suiteXmlFile>
							</suiteXmlFiles>
							<groups>${groups}</groups>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>doc</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven.source.plugin}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>			
					<plugin>
				        <groupId>org.apache.maven.plugins</groupId>
				        <artifactId>maven-javadoc-plugin</artifactId>
				        <version>${maven.javadoc.plugin}</version>
				        <executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
				                    <doclint>none</doclint>
				                    <source>${java.version}</source>
				                </configuration>
							</execution>
						</executions>
				    </plugin>
				    <plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven.gpg.plugin}</version>
						<executions>
							<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>maven-deploy</id>
			<distributionManagement>
		        <snapshotRepository>
		            <id>ossrh</id>
		            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		        </snapshotRepository>
		        <repository>
		            <id>ossrh</id>
		            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		        </repository>
		    </distributionManagement>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${nexus.staging.maven.plugin}</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>github-deploy</id>
			<distributionManagement>
				<repository>
					<id>github</id>
					<name>discoveryinc-cs</name>
					<url>https://maven.pkg.github.com/kwbhatti/data-utility</url>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>
</project>